@@ -1,0 +1,14 @@
+<!--
+  ~ Copyright (c) 2018 Evolveum and contributors
+  ~
+  ~ This work is dual-licensed under the Apache License 2.0
+  ~ and European Union Public License. See LICENSE file for details.
+  -->
+<archetype oid="0d69d2c9-d1f4-4cfc-acb3-af8a71db89d8"
+        xmlns="http://midpoint.evolveum.com/xml/ns/public/common/common-3"
+        xmlns:c="http://midpoint.evolveum.com/xml/ns/public/common/common-3"
+        xmlns:t="http://prism.evolveum.com/xml/ns/public/types-3"
+        xmlns:piracy="http://midpoint.evolveum.com/xml/ns/samples/piracy">
+    <name>Test inherited child</name>
+    <superArchetypeRef oid="0d69d2c9-d1f4-4cfc-acb3-af8a71db81d9" type="ArchetypeType"/>
+</archetype>
