@@ -165,6 +165,7 @@ The sample is located by the link xref:/midpoint/reference/security/authenticati
 * Fixed removal of unused authentication filters created by the rest authentication module invoked from the browser. See bug:MID-9580[].
 * Use the username from the identification authentication module in the LDAP authentication module. See bug:MID-10104[].
 * Small improvements and fixed bugs in resource wizard. See bug:MID-9311[], bug:MID-9320[] and bug:MID-9397[].
+* Fixed archetype reference item of parent archetype for object with `archived` lifecycle state. See bug:MID-10101[].
 
 === Releases Of Other Components
 
